package com.alok.studentTracker.entity.type;

public enum AuthProviderType {
    LOCAL,
    GOOGLE,
    GITHUB,
    EMAIL

}
