package com.alok.studentTracker.entity.type;

public enum CompletionStatus {
    COMPLETED,
    NOT_COMPLETED
}
