package com.alok.studentTracker.entity.type;

public enum StudentType {
    STANDARD,
    HEADMAN
}
